-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
-
aarch64
After merging jdk-26+3 in
runtime/valhalla/inlinetypes/classloading/ConcurrentClassLoadingTest.java with "-XX:+CheckUnhandledOops" crashes:
src/hotspot/cpu/aarch64/assembler_aarch64.hpp:232
guarantee(chk == -1 || chk == 0) failed: Field too big for insn at...
V [libjvm.so+0x1381d3c] Instruction_aarch64::spatch(unsigned char*, int, int, long) [clone .part.0]+0x30 (assembler_aarch64.hpp:232)
V [libjvm.so+0x1383274] MacroAssembler::pd_patch_instruction_size(unsigned char*, unsigned char*)+0x414 (macroAssembler_aarch64.cpp:243)
V [libjvm.so+0x16aaa1c] Relocation::pd_set_call_destination(unsigned char*)+0x70 (macroAssembler_aarch64.hpp:721)
V [libjvm.so+0x96c7d8] CodeBuffer::relocate_code_to(CodeBuffer*) const+0x490 (codeBuffer.cpp:807)
V [libjvm.so+0x970d2c] CodeBuffer::copy_code_to(CodeBlob*)+0x224 (codeBuffer.cpp:744)
V [libjvm.so+0x9657c4] AdapterBlob::create(CodeBuffer*, int, int, OopMapSet*, bool)+0xb4 (codeBlob.cpp:442)
V [libjvm.so+0x173823c] SharedRuntime::generate_i2c2i_adapters(MacroAssembler*, int, GrowableArray<SigEntry> const*, VMRegPair const*, GrowableArray<SigEntry> const*, VMRegPair const*, GrowableArray<SigEntry> const*, VMRegPair const*, AdapterHandlerEntry*, AdapterBlob*&, bool)+0x2b8 (sharedRuntime_aarch64.cpp:1019)
V [libjvm.so+0x17266e4] AdapterHandlerLibrary::generate_adapter_code(AdapterBlob*&, AdapterHandlerEntry*, CompiledEntrySignature&, bool, bool)+0x174 (sharedRuntime.cpp:3250)
V [libjvm.so+0x1726c80] AdapterHandlerLibrary::create_adapter(AdapterBlob*&, CompiledEntrySignature&, bool, bool)+0xa0 (sharedRuntime.cpp:3321)
V [libjvm.so+0x1727338] AdapterHandlerLibrary::get_adapter(methodHandle const&)+0x310 (sharedRuntime.cpp:3184)
V [libjvm.so+0x1455470] Method::make_adapters(methodHandle const&, JavaThread*)+0x6c (method.cpp:1354)
V [libjvm.so+0x1455850] Method::link_method(methodHandle const&, JavaThread*)+0x288 (method.cpp:1327)
V [libjvm.so+0xe5332c] InstanceKlass::link_methods(JavaThread*)+0xe8 (instanceKlass.cpp:1268)
V [libjvm.so+0xe54104] InstanceKlass::link_class_impl(JavaThread*)+0x998 (instanceKlass.cpp:1195)
V [libjvm.so+0xe5487c] InstanceKlass::link_class(JavaThread*)+0x7c (instanceKlass.cpp:976)
V [libjvm.so+0xe57de4] InstanceKlass::initialize_impl(JavaThread*)+0x64 (instanceKlass.cpp:1362)
V [libjvm.so+0xe58df0] InstanceKlass::initialize(JavaThread*)+0x70 (instanceKlass.cpp:891)
V [libjvm.so+0x12c50f4] LinkResolver::resolve_static_call(CallInfo&, LinkInfo const&, bool, JavaThread*)+0xa8 (linkResolver.cpp:1116)
V [libjvm.so+0x12c53b4] LinkResolver::resolve_invokestatic(CallInfo&, constantPoolHandle const&, int, JavaThread*)+0x94 (linkResolver.cpp:1748)
V [libjvm.so+0x12c8b0c] LinkResolver::resolve_invoke(CallInfo&, Handle, constantPoolHandle const&, int, Bytecodes::Code, JavaThread*)+0xdc (linkResolver.cpp:1706)
V [libjvm.so+0xe94c80] InterpreterRuntime::resolve_invoke(JavaThread*, Bytecodes::Code)+0x2f0 (interpreterRuntime.cpp:955)
V [libjvm.so+0xe95240] InterpreterRuntime::resolve_from_cache(JavaThread*, Bytecodes::Code)+0x90 (interpreterRuntime.cpp:1134)
j sun.util.locale.provider.TimeZoneNameUtility.retrieveDisplayNamesImpl(Ljava/lang/String;Ljava/util/Locale;)[Ljava/lang/String;+2 java.base@26-lworldea2
aarch64 specific changes in merge (may not necessarily be one of these):
8359373: Split stubgen initial blob into pre and post-universe blobs
8356556: AArch64: No need for acquire fence in safepoint poll in FFM
8358329: AArch64: emit direct branches in static stubs for small code caches
8359227: Code cache/heap size options should be size_t
runtime/valhalla/inlinetypes/classloading/ConcurrentClassLoadingTest.java with "-XX:+CheckUnhandledOops" crashes:
src/hotspot/cpu/aarch64/assembler_aarch64.hpp:232
guarantee(chk == -1 || chk == 0) failed: Field too big for insn at...
V [libjvm.so+0x1381d3c] Instruction_aarch64::spatch(unsigned char*, int, int, long) [clone .part.0]+0x30 (assembler_aarch64.hpp:232)
V [libjvm.so+0x1383274] MacroAssembler::pd_patch_instruction_size(unsigned char*, unsigned char*)+0x414 (macroAssembler_aarch64.cpp:243)
V [libjvm.so+0x16aaa1c] Relocation::pd_set_call_destination(unsigned char*)+0x70 (macroAssembler_aarch64.hpp:721)
V [libjvm.so+0x96c7d8] CodeBuffer::relocate_code_to(CodeBuffer*) const+0x490 (codeBuffer.cpp:807)
V [libjvm.so+0x970d2c] CodeBuffer::copy_code_to(CodeBlob*)+0x224 (codeBuffer.cpp:744)
V [libjvm.so+0x9657c4] AdapterBlob::create(CodeBuffer*, int, int, OopMapSet*, bool)+0xb4 (codeBlob.cpp:442)
V [libjvm.so+0x173823c] SharedRuntime::generate_i2c2i_adapters(MacroAssembler*, int, GrowableArray<SigEntry> const*, VMRegPair const*, GrowableArray<SigEntry> const*, VMRegPair const*, GrowableArray<SigEntry> const*, VMRegPair const*, AdapterHandlerEntry*, AdapterBlob*&, bool)+0x2b8 (sharedRuntime_aarch64.cpp:1019)
V [libjvm.so+0x17266e4] AdapterHandlerLibrary::generate_adapter_code(AdapterBlob*&, AdapterHandlerEntry*, CompiledEntrySignature&, bool, bool)+0x174 (sharedRuntime.cpp:3250)
V [libjvm.so+0x1726c80] AdapterHandlerLibrary::create_adapter(AdapterBlob*&, CompiledEntrySignature&, bool, bool)+0xa0 (sharedRuntime.cpp:3321)
V [libjvm.so+0x1727338] AdapterHandlerLibrary::get_adapter(methodHandle const&)+0x310 (sharedRuntime.cpp:3184)
V [libjvm.so+0x1455470] Method::make_adapters(methodHandle const&, JavaThread*)+0x6c (method.cpp:1354)
V [libjvm.so+0x1455850] Method::link_method(methodHandle const&, JavaThread*)+0x288 (method.cpp:1327)
V [libjvm.so+0xe5332c] InstanceKlass::link_methods(JavaThread*)+0xe8 (instanceKlass.cpp:1268)
V [libjvm.so+0xe54104] InstanceKlass::link_class_impl(JavaThread*)+0x998 (instanceKlass.cpp:1195)
V [libjvm.so+0xe5487c] InstanceKlass::link_class(JavaThread*)+0x7c (instanceKlass.cpp:976)
V [libjvm.so+0xe57de4] InstanceKlass::initialize_impl(JavaThread*)+0x64 (instanceKlass.cpp:1362)
V [libjvm.so+0xe58df0] InstanceKlass::initialize(JavaThread*)+0x70 (instanceKlass.cpp:891)
V [libjvm.so+0x12c50f4] LinkResolver::resolve_static_call(CallInfo&, LinkInfo const&, bool, JavaThread*)+0xa8 (linkResolver.cpp:1116)
V [libjvm.so+0x12c53b4] LinkResolver::resolve_invokestatic(CallInfo&, constantPoolHandle const&, int, JavaThread*)+0x94 (linkResolver.cpp:1748)
V [libjvm.so+0x12c8b0c] LinkResolver::resolve_invoke(CallInfo&, Handle, constantPoolHandle const&, int, Bytecodes::Code, JavaThread*)+0xdc (linkResolver.cpp:1706)
V [libjvm.so+0xe94c80] InterpreterRuntime::resolve_invoke(JavaThread*, Bytecodes::Code)+0x2f0 (interpreterRuntime.cpp:955)
V [libjvm.so+0xe95240] InterpreterRuntime::resolve_from_cache(JavaThread*, Bytecodes::Code)+0x90 (interpreterRuntime.cpp:1134)
j sun.util.locale.provider.TimeZoneNameUtility.retrieveDisplayNamesImpl(Ljava/lang/String;Ljava/util/Locale;)[Ljava/lang/String;+2 java.base@26-lworldea2
aarch64 specific changes in merge (may not necessarily be one of these):
8359373: Split stubgen initial blob into pre and post-universe blobs
8356556: AArch64: No need for acquire fence in safepoint poll in FFM
8358329: AArch64: emit direct branches in static stubs for small code caches
8359227: Code cache/heap size options should be size_t
- relates to
-
JDK-8367691 runtime/valhalla/inlinetypes/classloading/ConcurrentClassLoadingTest.java crashes with segmentation fault
-
- Resolved
-
-
JDK-8367729 [lworld] Handle OOME in code cache when generating inline type adapters
-
- Resolved
-
- links to
-
Commit(lworld)
openjdk/valhalla/b298ae08
-
Review(lworld)
openjdk/valhalla/1646