8367412: [lworld] Adapter creation fails with guarantee(chk == -1 || chk == 0) failed: Field too big for insn

Reviewed-by: mhaessig